# nebula-third-party

./: .env  .gitignore  CMakeLists.txt  Makefile  README.md  bison.cmake  boost.cmake  build-gcc.sh  build-third-party.sh  build.sh  bzip2.cmake  double-conversion.cmake  fatal.cmake  fbthrift.cmake  flex.cmake  folly.cmake  gettext.cmake  gflags.cmake  glog.cmake  googletest.cmake  gperf.cmake  install-third-party.sh  jemalloc.cmake  krb5.cmake  libevent.cmake  libunwind.cmake  mstch.cmake  openssl.cmake  proxygen.cmake  rocksdb.cmake  snappy.cmake  wangle.cmake  zlib.cmake  zstd.cmake
.github/workflows/: build.yml  docker.yml  pull_request-test.yml  pull_request.yml
docker/: Makefile  oss-upload.sh  run.sh
docker/aarch64/: centos-7.Dockerfile  centos-8.Dockerfile  ubuntu-1604.Dockerfile  ubuntu-1804.Dockerfile  ubuntu-2004.Dockerfile  ubuntu-2010.Dockerfile  ubuntu-2110.Dockerfile  ubuntu-2204.Dockerfile
docker/buildx/: centos-7.Dockerfile  centos-8.Dockerfile  rockylinux-8.Dockerfile  rockylinux-9.Dockerfile  ubuntu-1604.Dockerfile  ubuntu-1804.Dockerfile  ubuntu-2004.Dockerfile  ubuntu-2010.Dockerfile  ubuntu-2204.Dockerfile  ubuntu-2304.Dockerfile  ubuntu-2404.Dockerfile
docker/images/: Makefile  build-third-party.sh  centos-7-aarch64.Dockerfile  centos-7-x86_64.Dockerfile  centos-8-aarch64.Dockerfile  centos-8-x86_64.Dockerfile  oss-upload.sh  ubuntu-1604-aarch64.Dockerfile  ubuntu-1604-x86_64.Dockerfile  ubuntu-1804-aarch64.Dockerfile  ubuntu-1804-x86_64.Dockerfile  ubuntu-2004-aarch64.Dockerfile  ubuntu-2004-x86_64.Dockerfile  ubuntu-2010-aarch64.Dockerfile  ubuntu-2010-x86_64.Dockerfile
docker/x86_64/: centos-7.Dockerfile  centos-8.Dockerfile  ubuntu-1604.Dockerfile  ubuntu-1804.Dockerfile  ubuntu-2004.Dockerfile  ubuntu-2010.Dockerfile  ubuntu-2110.Dockerfile  ubuntu-2204.Dockerfile
helpers/: retrieve-glibc-version.sh  touch-if-exists.sh
patches/: folly-2021-03-01.patch
project/: CMakeLists.txt  check-so-libs.sh
project/cmake/: ExternalProjectGit.cmake
project/patches/: arrow-11.0.0.patch  arrow-17.0.0.patch  arrow-18.0.0.patch  bison.patch  breakpad-2021-11-11.patch  breakpad-aarch64.patch  bzip2-1.0.8.patch  cachelib-2021-12-02.patch  cachelib-2022-12-26.patch  date-3.0.1.patch  duckdb-0.6.1.patch  fbthrift-2021-11-29.patch  fbthrift-2022-12-26.patch  fizz-2022-12-26.patch  fmt-9.1.0.patch  folly-2021-03-01.patch  folly-2021-11-08.patch  folly-2021-11-29.patch  folly-2022-12-26.patch  glog-0.6.0.patch  glog-2021-11-29.patch  jinja2cpp-1.3.2.patch  libev-4.33.patch  lss-2021-12-20.tgz  proxygen-2021-03-01.patch  proxygen-2021-11-29.patch  proxygen-2022-12-26.patch  rocksdb-7.8.3.patch  rocksdb-cloud-2023-06-26.patch  s2geometry-0.10.0.patch  s2geometry-0.9.0.patch  snappy-1.1.9.patch
samples/: CMakeLists.txt  all-in-one.cpp  elf-insn.cpp  elf-instrset.cpp
samples/helpers/: retrieve-latest-release-tar.sh
